<resources>
    <string name="app_name">praktikum3_radioCheck</string>
    <string name="name">Name :</string>
    <string name="gender">Gender:</string>
    <string name="hobby">Hobby:</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="coding">Coding</string>
    <string name="reading">Reading</string>
    <string name="traveling">Traveling</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="input_your_name">Input your name</string>
</resources>